--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>locomotiva.ml</title>
 
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/pure-min.css">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="public/style.css">
 
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.png">
+  <link rel="shortcut icon" type="image/x-icon" href="public/favicon.png">
 
   <meta property="og:title" content="locomotiva.ml - experienced agile developers team">
   <meta property="og:type" content="website">
@@ -23,7 +23,7 @@
   <div class="splash-container">
     <div class="splash-background"></div>
     <div class="splash">
-      <a href="/" class="logo"><img src="/logo.png" alt="LOCOMOTIVA"></a>
+      <a href="/" class="logo"><img src="public/logo.png" alt="LOCOMOTIVA"></a>
       <h1 class="splash-head">Experienced agile developers that designs, develop & grow your products and ideas</h1>
       <p class="splash-subhead">
         We're here to help you small business owners, startups, organizations, brands build and deliver better software, focusing on user outcomes & simplicity, we minimize risk and increase your product's success with quality code & quality humans.
@@ -51,16 +51,16 @@
       </div>
 
       <div class="pure-u-1-4 pure-u-md-1-2 client">
-        <a href="https://lefooding.com"><img src="/lefooding.png" alt="" class="pure-img-responsive"></a>
+        <a href="https://lefooding.com"><img src="public/lefooding.png" alt="" class="pure-img-responsive"></a>
       </div>
       <div class="pure-u-1-4 pure-u-md-1-2 client">
-        <a href="https://encontreumnerd.com.br"><img src="/eun.png" alt="" class="pure-img-responsive"></a>
+        <a href="https://encontreumnerd.com.br"><img src="public/eun.png" alt="" class="pure-img-responsive"></a>
       </div>
       <div class="pure-u-1-4 pure-u-md-1-2 client">
-        <a href="https://gatonobre.com.br"><img src="/gatonobre.png" alt="" class="pure-img-responsive"></a>
+        <a href="https://gatonobre.com.br"><img src="public/gatonobre.png" alt="" class="pure-img-responsive"></a>
       </div>
       <div class="pure-u-1-4 pure-u-md-1-2 client">
-        <a href="javascript:void;"><img src="/lets.png" alt="" class="pure-img-responsive"></a>
+        <a href="javascript:void;"><img src="public/lets.png" alt="" class="pure-img-responsive"></a>
       </div>
     </div>
 
@@ -80,7 +80,7 @@
 
 
       <div class="footer l-box is-center">
-        <a href="/" class="logo"><img src="/logo.png" alt="LOCOMOTIVA"></a>
+        <a href="/" class="logo"><img src="public/logo.png" alt="LOCOMOTIVA"></a>
       </div>
     </div>
 
