--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
           <p>We can help you build an MVP and go to market; provide CTO-as-a-service to guide product and technology decisions; deliver a world-class user experience across devices and form factors. In short, we can take an idea from end to end.</p>
 
-          {{!-- team and expertise --}}
+          <!-- {{!-- team and expertise --}} -->
         </div>
       </div>
     </div>
