--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
   <title>locomotiva.ml</title>
 
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/pure-min.css">
-  <link rel="stylesheet" href="public/style.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bulma/0.0.15/css/bulma.min.css">
+  <link rel="stylesheet" href="public/jquery.mb.YTPlayer.min.css">
+
+  <link rel="stylesheet" href="public/style-new.css">
 
   <link rel="shortcut icon" type="image/x-icon" href="public/favicon.png">
 
@@ -20,19 +22,74 @@
 </head>
 
 <body>
-  <div class="splash-container">
-    <div class="splash-background"></div>
-    <div class="splash">
-      <a href="/" class="logo"><img src="public/logo.png" alt="LOCOMOTIVA"></a>
-      <h1 class="splash-head">Experienced agile developers that designs, develop & grow your products and ideas</h1>
-      <p class="splash-subhead">
-        We're here to help you small business owners, startups, organizations, brands build and deliver better software, focusing on user outcomes & simplicity, we minimize risk and increase your product's success with quality code & quality humans.
-      </p>
+  <header class="header">
+    <div class="container">
+      <!-- Left side -->
+      <div class="header-left">
+        <a class="header-item" href="#">
+          <img src="public/logo.png" alt="LOCOMOTIVA" style="height: 33px;">
+        </a>
+        <a class="header-tab" href="#">
+          Tab
+        </a>
+        <a class="header-tab is-active" href="#">
+          Active tab
+        </a>
+      </div>
+
+      <!-- Hamburger menu (on mobile) -->
+      <span class="header-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </span>
+
+      <!-- Right side -->
+      <div class="header-right header-menu">
+        <span class="header-item">
+          <a href="#">Nav item</a>
+        </span>
+        <span class="header-item">
+          <a href="#">Other nav item</a>
+        </span>
+        <span class="header-item">
+          <a class="button" href="#">Button</a>
+        </span>
+      </div>
     </div>
-  </div>
+  </header>
+
+  <section class="hero is-fullheight player" data-property="{videoURL:'http://youtu.be/b6Ppp5902Yg',containment:'self',autoPlay:true, mute:true, startAt:5, opacity:1, showControls: false}">
+    <div class="hero-content">
+      <div class="container">
+        <h1 class="title">
+          Experienced agile developers that designs, develop & grow your products and ideas
+        </h1>
+        <h2 class="subtitle">
+          We're here to help you small business owners, startups, organizations, brands build and deliver better software, focusing on user outcomes & simplicity, we minimize risk and increase your product's success with quality code & quality humans.
+        </h2>
+      </div>
+    </div>
+  </section>
+
+  <section class="section">
+    <div class="container">
+      <div class="heading">
+        <!-- <h1 class="title">Section</h1>
+        <h2 class="subtitle">
+          A simple container to divide your page into <strong>sections</strong>, like the one you're currently reading
+        </h2> -->
+
+        <h1 class="title">About us</h1>
+        <p>We are an integrated team of designers, web & mobile developers and business strategy types. In our network are some of the brightest engineers in town. If it involves the web, we can build it. If it has a screen, we can design for it.</p>
+
+        <p>We can help you build an MVP and go to market; provide CTO-as-a-service to guide product and technology decisions; deliver a world-class user experience across devices and form factors. In short, we can take an idea from end to end.</p>
+      </div>
+    </div>
+  </section>
 
   <div class="content-wrapper">
-    <div class="content about">
+    <!-- <div class="content about">
       <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
           <h2 class="content-head is-center">About us</h2>
@@ -43,7 +100,7 @@
           <!-- {{!-- team and expertise --}} -->
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="ribbon l-box-lrg pure-g">
       <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
@@ -92,6 +149,16 @@
 
       ga('create', 'UA-19971072-11', 'auto');
       ga('send', 'pageview');
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+
+    <script src="public/jquery.mb.YTPlayer.min.js"></script>
+
+    <script>
+      $(function(){
+        $(".player").YTPlayer();
+      });
     </script>
   </body>
   </html>
