--- a/app/index.html
+++ b/app/index.html
@@ -105,7 +105,7 @@
 
 
         <div class="footer l-box is-center">
-          <a href="/" class="logo"><img src="public/logo.png" alt="LOCOMOTIVA"></a>
+          <a href="/" class="logo"><img src="images/logo.png" alt="LOCOMOTIVA"></a>
         </div>
       </div>
     </div>
