Adding readme, new logos and travis

--- a/app/index.html
+++ b/app/index.html
@@ -35,17 +35,6 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="hero-unit">
-      <h1>'Allo, 'Allo!</h1>
-      <p>You now have</p>
-      <ul>
-        <li>HTML5 Boilerplate</li>
-        <li>Sass</li>
-        <li>Modernizr</li>
-        <li>jQuery</li>
-      </ul>
-    </div>
-
     <div class="splash-container">
       <div class="splash-background"></div>
       <div class="splash">
@@ -118,7 +107,8 @@
       e=o.createElement(i);r=o.getElementsByTagName(i)[0];
       e.src='https://www.google-analytics.com/analytics.js';
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
+      ga('create', 'UA-19971072-11', 'auto');
+      ga('send','pageview');
     </script>
 
     <!-- build:js scripts/vendor.js -->
