--- a/app/index.html
+++ b/app/index.html
@@ -35,9 +35,12 @@
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <!-- <a href="/" class="logo"><img src="images/logo.png" alt="LOCOMOTIVA"></a> -->
 
-    <section class="hero first-section player" data-property="{ videoURL: 'http://youtu.be/1dgLEDdFddk', containment: 'self',autoPlay: true, mute: true, startAt: 7, opacity: 1, showControls: false, showYTLogo: false, loop: true }">
+    <header class="header is-fixed">
+      <a href="/" class="logo"><img src="images/logo.png" alt="LOCOMOTIVA"></a>
+    </header>
+
+    <section class="hero first-section player flex-center" data-property="{ videoURL: 'http://youtu.be/1dgLEDdFddk', containment: 'self',autoPlay: true, mute: true, startAt: 7, opacity: 1, showControls: false, showYTLogo: false, loop: true }">
       <div class="hero-content">
         <h1 class="title">Experienced agile developers that designs, develop & grow your products and ideas</h1>
         <h2 class="subtitle">
@@ -46,38 +49,32 @@
       </div>
     </section>
 
-    <div class="content-wrapper">
-      <div class="content about">
-        <div class="pure-g">
-          <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
-            <h2 class="content-head is-center">About us</h2>
-            <p>We are an integrated team of designers, web & mobile developers and business strategy types. In our network are some of the brightest engineers in town. If it involves the web, we can build it. If it has a screen, we can design for it.</p>
+    <section class="about-section flex-center">
+      <div class="hero-content">
+        <h2 class="title">About us</h2>
+        <p>We are an integrated team of designers, web & mobile developers and business strategy types. In our network are some of the brightest engineers in town. If it involves the web, we can build it. If it has a screen, we can design for it.</p>
 
-            <p>We can help you build an MVP and go to market; provide CTO-as-a-service to guide product and technology decisions; deliver a world-class user experience across devices and form factors. In short, we can take an idea from end to end.</p>
+        <p>We can help you build an MVP and go to market; provide CTO-as-a-service to guide product and technology decisions; deliver a world-class user experience across devices and form factors. In short, we can take an idea from end to end.</p>
 
-            <!-- {{!-- team and expertise --}} -->
-          </div>
-        </div>
-      </div>
+        <h2 class="content-head is-center">Our clients</h2>
 
-      <div class="ribbon l-box-lrg pure-g">
-        <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
-          <h2 class="content-head is-center">Our clients</h2>
-        </div>
-
-        <div class="pure-u-1-4 pure-u-md-1-2 client">
+        <div class="client">
           <a href="https://lefooding.com"><img src="images/lefooding.png" alt="" class="img-responsive"></a>
         </div>
-        <div class="pure-u-1-4 pure-u-md-1-2 client">
+        <div class="client">
           <a href="https://encontreumnerd.com.br"><img src="images/eun.png" alt="" class="img-responsive"></a>
         </div>
-        <div class="pure-u-1-4 pure-u-md-1-2 client">
+        <div class="client">
           <a href="https://gatonobre.com.br"><img src="images/gatonobre.png" alt="" class="img-responsive"></a>
         </div>
-        <div class="pure-u-1-4 pure-u-md-1-2 client">
+        <div class="client">
           <a href="javascript:void;"><img src="images/lets.png" alt="" class="img-responsive"></a>
         </div>
       </div>
+      <!-- team and expertise -->
+    </section>
+
+    <div class="content-wrapper">
 
       <div class="content contact">
         <div class="pure-g">
