--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="description" content="">
@@ -13,6 +13,7 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/reset-css/reset.css" />
+    <link rel="stylesheet" href="/bower_components/flexboxgrid/dist/flexboxgrid.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -41,7 +42,7 @@
     </header>
 
     <section class="hero first-section player flex-center" data-property="{ videoURL: 'http://youtu.be/1dgLEDdFddk', containment: 'self',autoPlay: true, mute: true, startAt: 7, opacity: 1, showControls: false, showYTLogo: false, loop: true }">
-      <div class="hero-content">
+      <div class="content">
         <h1 class="title">Experienced agile developers that designs, develop & grow your products and ideas</h1>
         <h2 class="subtitle">
           We're here to help you small business owners, startups, organizations, brands build and deliver better software, focusing on user outcomes & simplicity, we minimize risk and increase your product's success with quality code & quality humans.
@@ -50,54 +51,52 @@
     </section>
 
     <section class="about-section flex-center">
-      <div class="hero-content">
+      <div class="content">
         <h2 class="title">About us</h2>
+
         <p>We are an integrated team of designers, web & mobile developers and business strategy types. In our network are some of the brightest engineers in town. If it involves the web, we can build it. If it has a screen, we can design for it.</p>
 
         <p>We can help you build an MVP and go to market; provide CTO-as-a-service to guide product and technology decisions; deliver a world-class user experience across devices and form factors. In short, we can take an idea from end to end.</p>
-
-        <h2 class="content-head is-center">Our clients</h2>
-
-        <div class="client">
-          <a href="https://lefooding.com"><img src="images/lefooding.png" alt="" class="img-responsive"></a>
-        </div>
-        <div class="client">
-          <a href="https://encontreumnerd.com.br"><img src="images/eun.png" alt="" class="img-responsive"></a>
-        </div>
-        <div class="client">
-          <a href="https://gatonobre.com.br"><img src="images/gatonobre.png" alt="" class="img-responsive"></a>
-        </div>
-        <div class="client">
-          <a href="javascript:void;"><img src="images/lets.png" alt="" class="img-responsive"></a>
-        </div>
       </div>
       <!-- team and expertise -->
     </section>
 
-    <div class="content-wrapper">
+    <section class="clients-section flex-center">
+      <div class="content">
+        <h2 class="title">Our Clients</h2>
 
-      <div class="content contact">
-        <div class="pure-g">
-          <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
-            <h2 class="content-head is-center">CONTACT</h2>
-              <p>If you want to take a coffee with us, came here at <em>Rua Fernando Simas, 95 - room 6</em> on our lovely Curitiba or on the links below:</p>
-
-              <ul class="contact-list">
-                <li><a href="mailto:team@locomotiva.ml">team@locomotiva.ml</a></li>
-                <li><a href="https://github.com/locomotivaml">github.com/locomotivaml</a></li>
-              </ul>
-            </div>
+        <div class="row flex-center clients-list">
+          <div class="col-md-3">
+            <a href="https://lefooding.com"><img src="images/lefooding.png" alt="" class="img-responsive"></a>
+          </div>
+          <div class="col-md-3">
+            <a href="https://encontreumnerd.com.br"><img src="images/eun.png" alt="" class="img-responsive"></a>
+          </div>
+          <div class="col-md-3">
+            <a href="https://bandtripper.com"><img src="images/bandtripper.png" alt="" class="img-responsive"></a>
+          </div>
+          <div class="col-md-3">
+            <a href="https://atualizecar.com.br"><img src="images/atualizecar.png" alt="" class="img-responsive"></a>
           </div>
         </div>
-
-
-        <div class="footer l-box is-center">
-          <a href="/" class="logo"><img src="images/logo.png" alt="LOCOMOTIVA"></a>
-        </div>
       </div>
-    </div>
+    </section>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <section class="contact-section flex-center">
+      <div class="content">
+        <h2 class="title">Contact</h2>
+
+        <p>If you want to take a coffee with us, came here at <em>Rua Fernando Simas, 95 - room 6</em> on our lovely Curitiba or on the links below:</p>
+
+        <ul class="contact-list">
+          <li><a href="mailto:team@locomotiva.ml">team@locomotiva.ml</a></li>
+          <li><a href="https://github.com/locomotivaml">github.com/locomotivaml</a></li>
+        </ul>
+      </div>
+    </section>
+
+
+    <!-- Google Analytics -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
