Latest case cta

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,13 @@
       <!-- team and expertise -->
     </section>
 
+    <!-- <section class="cases-section flex-center">
+      <div class="content">
+        <h2 class="title">Latest Cases</h2>
+
+      </div>
+    </section> -->
+
     <section class="clients-section flex-center">
       <div class="content">
         <h2 class="title">Our Clients</h2>
