--- a/index.html
+++ b/index.html
@@ -1,227 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta charset="UTF-8">
+  <title>Redirecting...</title>
+  <script>
+    var browserLanguage = (window.navigator.userLanguage || window.navigator.language).toLowerCase();
+    var redirectTo = "";
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:900">
-    <link rel="stylesheet" href="/css/styles.min.css">
-
-    <title>locomotiva.ml</title>
-
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <!-- Place favicon.ico in the root directory -->
-    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.png">
-
-    <meta property="og:title" content="locomotiva.ml - experienced agile developers team">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="http://locomotiva.ml">
-    <meta property="og:image" content='http://locomotiva.ml/fb.png'>
-    <meta property="og:site_name" content="locomotiva.ml - experienced agile developers team">
-    <meta property="og:description" content="We're here to help you small business owners, startups, organizations, brands build and deliver better software, focusing on user outcomes & simplicity, we minimize risk and increase your product's success with quality code & quality humans.">
-
+    if (browserLanguage.startsWith('pt')) {
+      redirectTo = "/pt/index.html"
+    } else {
+      redirectTo = "/en/index.html"
+    }
+    window.location = redirectTo;
+  </script>
 </head>
 <body>
-
-    <section class="content_area header_area">
-        <div class="container">
-            <img src="/images/logo.png" />
-            <h1>Creating software that runs your business.</h1>
-            <p class="slogan">Our multidisciplinary team is always looking for the next great idea that will make the world a better place through our software solutions.</p>
-
-            <div class="row">
-                <div class="col-md-8">
-                    <h3 class="text-box-title">From paper to market</h3>
-                    <p class="text-box-text">We help founders take their ideas all the way from sketches on a notebook to market ready companies that impact the world in meaningful ways. </p>
-                </div>
-                <div class="col-md-8">
-                    <h3 class="text-box-title">Remote team</h3>
-                    <p class="text-box-text">We provide established companies and startups with the tech team and project management needed to achieve goals and maximize efforts in a smart, modern way.</p>
-                </div>
-                <div class="col-md-8">
-                    <h3 class="text-box-title">Product Development</h3>
-                    <p class="text-box-text">We love creating new, exciting software based products and solutions to take your ideas to the next level. From new founders to seasoned professionals, collaborating with you to create amazing results is what moves us.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- <section class="content_area our_work">
-        <div class="container">
-            <h2>Our Work</h2>
-            <p>We at Locomotiva are passionate about developing and building great ideas.</p>
-            <p>Our team is always ready to apply the latests practices, languages and technologies available to your projects, providing a range of different services that adapt to you and your company's needs.</p>
-        </div>
-    </section> -->
-
-
-    <section class="content_area case_area luztr">
-      <div class="container">
-        <p class="header">Our latest project</p>
-        <img src="/images/luztr.png" alt="" class="img-fluid">
-        <h1>L U Z T R</h1>
-        <p>After failed and wasteful interactions with other software development companies, Luztr became our client. At this point, we became their remote team, including demand based CTO services.</p>
-        <p>We immersed ourselves in the company and its operations in order to better understand the demands and challenges faced.</p>
-        <p>After only three months and much better used resources, the client is now launching it’s fully operational and multi platform supported progressive app.</p>
-        <p>We also shared our startup mindset with the founders and employees, showing how to get better results in more cost and time effective ways.</p>
-        <br>
-        <p>Currently, we provide Luztr with all their CTO and software remote team services.</p>
-      </div>
-    </section>
-
-    <section class="content_area case_area bandtripper">
-        <div class="container">
-            <p class="header"></p>
-            <img src="/images/bandtripper.png" alt="" class="img-fluid">
-            <h1>BandTripper</h1>
-            <p>Execution from MVP to final product + CTO on demand</p>
-            <p>We started consulting for BandTripper since its very beginning.</p>
-            <p>Along with the founders, we have conceptualized the whole platform and created its first MVP from landing page to final product.</p>
-            <p>We performed CTO on demand services for the months following the release.</p>
-        </div>
-    </section>
-
-    <section class="content_area portfolio_area more">
-        <div class="container">
-            <p class="header">Our Clients</p>
-            <div class="row">
-                <div class="col-md-3">
-                  <div class="thumb">
-                      <img src="/images/eun.png" alt="" class="img-fluid">
-                  </div>
-                  <h3>Encontre um Nerd</h3>
-                  <p>Co-founded + conceptualization + execution from MVP to final product</p>
-                </div>
-                <div class="col-md-3">
-                  <div class="thumb">
-                      <img src="/images/acegroup.png" alt="" class="img-fluid">
-                  </div>
-                  <h3>Ace Group</h3>
-                  <p>Progressive App dev + creation of their online startup scoring system</p>
-                </div>
-                <div class="col-md-3">
-                  <div class="thumb">
-                      <img src="/images/salesim.png" alt="" class="img-fluid">
-                  </div>
-                  <h3>Salesim</h3>
-                  <p>Backend refactoring from Java to Ruby + Ionic Mobile dev</p>
-                </div>
-                <div class="col-md-3">
-                  <div class="thumb">
-                      <img src="/images/atualizecar.png" alt="" class="img-fluid">
-                  </div>
-                  <h3>Atualizecar</h3>
-                  <p>SaaS dev with Ruby on Rails + Ionic Mobile dev + Product Discovery and Development</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- <a href="https://lefooding.com" class="col-customer"><img src="/images/lefooding.png" alt="" class="img-fluid"></a> -->
-    <section class="content_area portfolio_area">
-      <div class="container-fluid">
-        <div class="row">
-
-        </div>
-      </div>
-    </section>
-
-    <section class="content_area about_area">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h1>About Us</h1>
-
-                    <p>We are a team of tech hackers, reaching for everything opensourced and new,
-                    always with one eye on the market and the other on the innovations happening around the world.</p>
-                    <p>Our startup background helps us build great solutions in short periods of time and with real impact in people’s lives.</p>
-                    <p>We always focus on ideas, products and concepts that truly make the world a better place.</p>
-
-                </div>
-                <div class="col-md-6 advantages">
-                    <h1>Advantages</h1>
-
-                    <ul class="list-unstyled">
-                        <li>
-                            <strong>Startup Background</strong>
-                            <ul class="list-unstyled">
-                                <li>Our startup background gives us that edge of always keeping ourselves updated and in touch with all great new technology.</li>
-                                <li>We have the right minds to understand the user’s use and consume habits.</li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <strong>You focused on your operations</strong>
-                            <ul class="list-unstyled">
-                                <li>With us, you have a real partner that will always be working it’s best for your company's software. </li>
-                                <li>No worrying about tech project management or constant supervision, we understand your needs and present real results.</li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <strong>Remote Work</strong>
-                            <ul class="list-unstyled">
-                                <li>Our team works with full productivity in the right environment, not adding coasts to your day to day logistics.</li>
-                                <li>We only chose projects we truly believe in, so you can rest assured that you have the right team at your side.</li>
-                            </ul>
-                        </li>
-                    </ul>
-
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-
-
-      <section class="content_area contact_area">
-          <div class="container">
-              <h2>Contact</h2>
-
-              <p>We’re always looking for interesting ideas, projects and challenges from all over the world.</p>
-              <p>With our remote team, it doesn’t matter where you are.</p>
-                <p><a href="mailto:team@locomotiva.ml" class="">Let’s talk about your idea.</a></p>
-
-                <p>We can all come together to create great companies, products and services that make the world a better place!</p>
-<br><br>
-            <p class="last-line text-md-center">
-                <a href="mailto:team@locomotiva.ml">team@locomotiva.ml</a> -
-                <a href="https://github.com/locomotivaml">github.com/locomotivaml</a>
-            </p>
-              <!-- <p>
-                  <ul>
-                      <li></li>
-                      <li></li>
-                      <li><a href="https://facebook.com/locomotiva.ml">facebook.com/locomotiva.ml</a></li>
-                  </ul>
-              </p> -->
-          </div>
-      </section>
-    </div>
-
-    <!-- Google Analytics -->
-  <script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-    e.src='https://www.google-analytics.com/analytics.js';
-    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create', 'UA-19971072-11', 'auto');
-    ga('send','pageview');
-  </script>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="sha384-VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-      $(function() {
-
-
-
-      })
-    </script>
+  Redirecting you <a href="/en/index.html">to our English Website</a>
 </body>
 </html>
